# polystokes_brownian

./: .gitignore  CHANGES.md  CMakeLists.txt  INSTALL.md  README.md  analyze_brownian_stresslet.py  get_msd.py  make_gsd.py  mob.csv  params.pkl  plot_bond_distribution.py  plot_central_angle.py  plot_particle_drift_after_stop.py  plot_trap_distribution.py  pyproject.toml  scratch_mpi_check.py  scratch_mpi_scaling.py  scratch_profile.py  scratch_validate_ksp.py  sphere_rotation_animation.py  test_sim.py  test_sim_colloid_brushes.py  test_sim_dumbbells_thermal.py
build_openblas/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
docs/: bond_length_theory.tex  parallelization_roadmap.md  profiling_baseline_serial.md
lubdat/: r2babc.dat%3AZone.Identifier
mobdat/: rpy_kk_mobilities.tex
particle_drift_after_stop_test/: particle_drift_after_stop_r12_trap_large.npy  particle_drift_after_stop_r12_trap_small.npy  particle_drift_after_stop_times.npy  trajectory_trap_large.npy  trajectory_trap_small.npy
src/: CellList.cpp  CellList.h  Stokes.cpp  Stokes.h  app  arrays.cpp  arrays.h  bindings.cpp  box.cpp  box.h  cell_list.cpp  check_dist.cpp  cleanup.cpp  conf.in  data.h  drift.cpp  globals.h  init.cpp  makefile  matfree_A.cpp  matfree_A_mpi.cpp  mob.cpp  multi_arrays.h  multi_arrays_initialize.cpp  pair_interaction.cpp  pair_interaction.h  params.h  quat.cpp  quat.h  rhs.cpp  rhs.h  run.cpp  saddle.cpp  saddle.h  slip_vel.cpp  traj.cpp  vel.cpp  write_configuration.cpp
src/config/: config_0.001_.txt  config_0.011_.txt  config_0.021_.txt  config_0.031_.txt  config_0.041_.txt  config_0.051_.txt  config_0.061_.txt  config_0.071_.txt  config_0.081_.txt  config_0.091_.txt  config_0.101_.txt  config_0.111_.txt  config_0.121_.txt  config_0.131_.txt  config_0.141_.txt  config_0.151_.txt  config_0.161_.txt  config_0.171_.txt  config_0.181_.txt  config_0.191_.txt  config_0.201_.txt  config_0.211_.txt  config_0.221_.txt  config_0.231_.txt  config_0.241_.txt  config_0.251_.txt  config_0.261_.txt  config_0.271_.txt  config_0.281_.txt  config_0.291_.txt  config_0.301_.txt  config_0.311_.txt  config_0.321_.txt  config_0.331_.txt  config_0.341_.txt  config_0.351_.txt  config_0.361_.txt  config_0.371_.txt  config_0.381_.txt  config_0.391_.txt  (+467 more)
